--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
         <div class="grid grid-home">
 
             <header class="header">
-                <div class="header_nav-logo-container home-nav-bg">
+                <div class="header_nav-logo-container">
                     <img class="header_logo" src="images/Laboratory-Logo-WHITE.png"
                         alt="Laboratory text logo">
                     {{ partial "nav" . }}
