--- a/assets/sass/nav.scss
+++ b/assets/sass/nav.scss
@@ -5,13 +5,14 @@
     padding: 5px 0 10px 10px;
     position: absolute;
     left: 40px;
-
-    background-image: linear-gradient( #002540, #004B80);
+    background-image: linear-gradient(to right, rgba(27, 31, 38, 0.8) 30%, rgba(27, 31, 38, 0) 75%);
+    // background-image: linear-gradient( #002540, #004B80);
+    z-index: 100;
 }
 
-.home-nav-bg {
-    background-image: linear-gradient(to right, #1B1F26 45%, rgba(0, 0, 0, 0));
-}
+// .home-nav-bg {
+//     background-image: linear-gradient(to right, #1B1F26 45%, rgba(0, 0, 0, 0));
+// }
 
 .header_logo {
     width: 200px;
