event page groups by month

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,7 +15,7 @@
                     {{ partial "nav" . }}
                 </div>
 
-                <div class="header_image-holder {{ if .Params.type }}{{.Params.type}}{{end}}">
+                <div class="header_image-holder {{ if .Params.listType }}{{.Params.listType}}{{end}}">
                     <footer>
                         <div class="tagline">interactive, digital, performance art</div>
                     </footer>
