--- a/layouts/partials/event_preview.html
+++ b/layouts/partials/event_preview.html
@@ -1,15 +1,22 @@
 <section class="events_preview">
+
+    
     <img class="events_thumbnail" src={{.Params.thumbnail}}>
-    <div class="events_event-info">
 
         <h2 class="events_event-title"><a href="{{.URL}}">
             {{if .Params.title }}
             {{.Params.title}},
             {{end}}
             {{.Params.artist}}</a></h2>
-        <p class="events_preview_date">{{ dateFormat "Monday, January 2, 2006" .Date }}, {{.Params.time}}</p>
+        <div>
+        <p class="events_preview_date">{{ dateFormat "Monday, January 2, 2006" .Date }},<br/>{{.Params.time}}</p>
         <p class="events_preview_location">{{.Params.venue}}</p>
         <p class="events_preview_address">{{.Params.address}}</p>
-    </div>
-    <a class="preview_link-more" href="{{.URL}}">more</a>
+        </div>
+
+
+        <p class="preview_summary">{{.Summary | truncate 162 }}</p>
+
+        <a class="preview_link-more" href="{{.URL}}">more</a>
+
 </section>
