--- a/assets/sass/list-page.scss
+++ b/assets/sass/list-page.scss
@@ -5,22 +5,34 @@
     grid-template-areas:
         "header"
         "subhead "
-        "listings"
+        "listings";
+    width: 100%;
+    // border: solid 1px salmon;
 }
 
-    .subhead_type {
-        max-width: 67%;
-        grid-area: subhead;
-        display: inline-block;
-        margin: 0;
-        height: auto;
-        background: #000;
-        color: #fff;
-        font-weight: 600;
-        padding: 5px 10px;
-        background: #00416F;
-        width: 100%;
-    }
+.subhead_type {
+    width: 100%;
+    grid-area: subhead;
+    display: inline-block;
+    margin: 0;
+    height: auto;
+    background: #000;
+    color: #fff;
+    font-weight: 600;
+    padding: 5px 10px;
+    background: linear-gradient(to right, #00416F 45%, rgba(0, 65, 111, 0.4));
+
+}
+
+.subhead_date {
+    width: 100%;
+    background: linear-gradient(to right, #7C95BF, rgba(124, 149, 191, 0.2));
+    color: #eee;
+    margin: 10px 0;
+    font-weight: 600;
+    padding: 5px 10px;
+    font-size: 22px;
+} 
 
 
 .listings {
@@ -42,23 +54,14 @@
     align-content: stretch;
     // justify-content: center;
     // height: 500px;
-    // padding: 10px;
+    // padding: 10px;   
+}
 
-    h1 {
-        width: 100%;
-        background: #7C95BF;
-        color: #eee;
-        margin: 10px 68% 10px 0;
-        font-weight: 600;
-        padding: 5px 10px;
-        font-size: 22px;
-    }    
-    section {
-        flex: 0 1 auto;
-        width: 31%;
-        padding: 10px;
-        margin: 10px;
-    }
+.list_block {
+    flex: 0 1 auto;
+    width: 31%;
+    padding: 10px;
+    margin: 10px;
 }
 
 .list_intro {
@@ -74,6 +77,7 @@
 }
 
 .event-listing {
+    padding: 20px 10px 15px 20px;
     height: 450px;
     background: #F7F5F0;
 }
