--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -11,8 +11,8 @@
 }
 
 body {
-    background-image: -webkit-gradient(linear, left top, right top, color-stop(90%, #B3B0AB), to(#8C8A86));
-    background-image: linear-gradient(to right, #B3B0AB 90%, #8C8A86);
+    background: -webkit-gradient(linear, left top, right top, color-stop(90%, #B3B0AB), to(#8C8A86));
+    background: linear-gradient(to right, #B3B0AB 90%, #8C8A86);
     font-family: 'Cairo', sans-serif;
     color: #000;
     /* padding-top: 3px; */
@@ -52,8 +52,9 @@ a {
     height: auto;
     min-height: 100vh;
     margin: 3px auto 10px auto;
-    padding: 32px 70px 50px 40px;
+    padding: 32px 55px 50px 40px;
     position: relative;
+    left: 5px;
 }
 
 .grid {
@@ -62,6 +63,7 @@ a {
     -webkit-box-align: start;
     -ms-flex-align: start;
     align-items: start;
+// border: solid 1px purple;
 
     section {
         justify-self: stretch;
@@ -138,9 +140,10 @@ a {
     letter-spacing: 0.05em;
     color: #bfbfbf;
     padding: 9px 0 0 15px;
-    background-image: -webkit-gradient(linear, left top, right top, from(#1B1F26), color-stop(60%, rgba(0, 0, 0, 0)));
-    background-image: linear-gradient(to right, rgba(27, 31, 38, 0.65), rgba(27, 31, 38, 0) 60%);
+    background: -webkit-gradient(linear, left top, right top, from(#1B1F26), color-stop(60%, rgba(0, 0, 0, 0)));
+    background: linear-gradient(to right, rgba(27, 31, 38, 0.65), rgba(27, 31, 38, 0) 60%);
     text-transform: uppercase;
+    border-top: solid 1px rgba(179, 176, 171, 0.3);
 }
 
 .carousel-control {
