--- a/assets/sass/previews.scss
+++ b/assets/sass/previews.scss
@@ -5,6 +5,7 @@
 }
 
 .events_preview {
+    font-size: 16px;
     clear: both;
     overflow: hidden;
     margin-bottom: 15px;
@@ -26,14 +27,7 @@
     min-width: 75px;
     height: auto;
     float: left;
-    margin-bottom: 10px;
-}
-
-.events_event-info {
-    display: inline-block;
-    width: 65%;
-    margin-left: 10px;
-    font-size: 16px;
+    margin: 0 15px 15px 0;
 }
 
 .events_event-title {
@@ -48,4 +42,41 @@
 .events_preview_location,
 .events_preview_address {
     margin: 5px 0;
+}
+
+.preview_summary {
+    display: none;
+}
+
+
+// ===== FOR LIST PAGE =====
+
+.event-listing {
+    // position: relative;
+
+    .events_thumbnail {
+        width: 40%;
+        margin-top: 5px;
+        margin-bottom: 50px;
+    }
+
+    .events_event-title {
+        font-size: 26px;
+        font-weight: 700;
+        margin-bottom: 25px;
+    }
+
+    .events_preview_date {
+        font-size: 17px;
+        line-height: 1.3;
+    }
+
+    .preview_summary {
+        display: inline-block;
+        font-size: 17px;
+        line-height: 1.4;
+        margin-top: 10px;
+    }
+
+
 }
