--- a/assets/sass/single-page.scss
+++ b/assets/sass/single-page.scss
@@ -4,7 +4,8 @@
     grid-gap: 35px;
     grid-template-areas:
         "header header"
-        "primary sidebar"
+        "primary sidebar";
+    // border: solid 1px salmon;
 }
 
 // /* ===== APPLIES TO SINGLE AND LIST -- MOVE? ===== */
@@ -18,20 +19,21 @@
 .header_image-holder {
     grid-area: header;
     height: 300px;
-    width: calc(100% + 40px);
+    width: 100%;
     background: #B3B0AB;
     position: relative;
     background-position-x: 40px;
-    background-position-y: 80%; //specific to current picture
     background-size: 100%;
     background-repeat: no-repeat;
 
     &.events {
         background-image: url("/images/SzymonKaliski.png");
+        background-position-y: 80%; //specific to current picture
     }
 
     &.artists {
         background-image: url("/images/LizaStark_TheTellTaleQuilt.png");
+        background-position-y: 20%; //specific to current picture
     }
 }
 
@@ -44,9 +46,6 @@
 
 .event-info {
     margin-top: 30px;
-    p {
-        line-height: 20px;
-    }
 
     a {
         font-size: 18px;
@@ -55,9 +54,10 @@
     }
 }
 
-.event_time {
+.event_date {
     font-weight: 700;
     font-size: 20px;
+    line-height: 1.3;
 }
 
 .event_venue-address {
