--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,15 +2,14 @@
 <!-- EVENTS - LIST TEMPLATE -->
 <!-- Nav, Social, and Header pic are in baseof -->
 
-<h1 class="subhead_type">{{.Params.type}}</h1>
+<h1 class="subhead_type">{{.Params.listType}}</h1>
 
 <div class="listings">
     <div class="flex-wrapper">
-        <section class="list_intro">Event intro text</section>
-        <section class="date-filter">filter</section>
+        <section class="list_block list_intro">Event intro text</section>
+        <section class="list_block date-filter">filter</section>
 
-        {{partial "listings" .}}
-        {{partial "listings" .}}
+        {{partial "listings_tests" . }}
 
     </div>
 </div>
