--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -39,6 +39,10 @@ a {
     text-decoration: underline;
 }
 
+a:hover {
+    color: #E6AC5C;
+}
+
 .triangle {
     width: 0;
     height: 0;
@@ -86,8 +90,10 @@ a {
 .social-links {
     position: absolute;
     right: 32px;
-    top: 40px;
+    top: 15px;
     z-index: 500;
+    background: #fff;
+    padding: 5px;
 
     img {
         height: 38px;
