--- a/assets/sass/nav.scss
+++ b/assets/sass/nav.scss
@@ -33,10 +33,16 @@
 
 .header_nav_menu-item {
     position: relative;
-}
 
-.header_nav_menu-item:hover {
-    color: #deab63;
+    &:hover {
+        color: #deab63;
+    
+        > .triangle_drop-down {
+            border-color: #fff transparent transparent transparent;
+        }
+    }
+
+
 }
 
 .header_nav div {
