--- a/assets/sass/pagination.scss
+++ b/assets/sass/pagination.scss
@@ -14,6 +14,15 @@
 
     a {        
         letter-spacing: 0.02em;
+
+        &:hover {
+            > .triangle_previous {
+                border-color:  transparent #7C95BF transparent transparent;
+            }
+            > .triangle_next {
+                border-color:  transparent transparent transparent #7C95BF ;
+            }
+        }
     }
 }
 
@@ -24,7 +33,6 @@
 }
 
 .triangle_next {
-
     border-width: 6px 0 6px 12px;
     border-color:  transparent  transparent  transparent #004B80;
     margin: 0 0 0 12px;
