--- a/assets/sass/previews.scss
+++ b/assets/sass/previews.scss
@@ -45,38 +45,9 @@
 }
 
 .preview_summary {
+    // Removes summary from display in small previews
     display: none;
 }
 
 
-// ===== FOR LIST PAGE =====
 
-.event-listing {
-    // position: relative;
-
-    .events_thumbnail {
-        width: 40%;
-        margin-top: 5px;
-        margin-bottom: 50px;
-    }
-
-    .events_event-title {
-        font-size: 26px;
-        font-weight: 700;
-        margin-bottom: 25px;
-    }
-
-    .events_preview_date {
-        font-size: 17px;
-        line-height: 1.3;
-    }
-
-    .preview_summary {
-        display: inline-block;
-        font-size: 17px;
-        line-height: 1.4;
-        margin-top: 10px;
-    }
-
-
-}
