--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,22 +1,9 @@
 <nav class="header_nav">
     <img class="header_nav_divider" src="/images/slash.svg">
-    <div class="header_nav_menu-item">current
-        <div class="triangle triangle_drop-down"></div>
-        <div class="nav_subnav">
-            <a href="/artists"><div class="subnav_menu-item">artists</div></a>
-            <a href="/events"><div class="subnav_menu-item">projects</div></a>
-        </div>
-    </div>
+    <div class="header_nav_menu-item"><a href="/artists">artists</a></div>
 
     <img class="header_nav_divider" src="/images/slash.svg">
-    <div class="header_nav_menu-item">past work
-        <div class="triangle triangle_drop-down"></div>
-        <div class="nav_subnav">
-            <div class="subnav_menu-item">artists</div>
-            <div class="subnav_menu-item">projects</div>
-            <div class="subnav_menu-item">videos</div>
-        </div>
-    </div>
+    <div class="header_nav_menu-item"><a href="/events">projects</a></div>
 
     <img class="header_nav_divider" src="/images/slash.svg">
     <div class="header_nav_menu-item">support us
