--- a/assets/sass/nav.scss
+++ b/assets/sass/nav.scss
@@ -9,15 +9,10 @@
     z-index: 100;
 }
 
-// .home-nav-bg {
-//     background: linear-gradient(to right, #1B1F26 45%, rgba(0, 0, 0, 0));
-// }
-
 .header_logo {
     width: 200px;
     height: auto;
     margin-right: 20px;
-
 }
 
 .header_nav {
@@ -33,6 +28,11 @@
 
 .header_nav_menu-item {
     position: relative;
+
+    a {
+        color: #fff;
+        text-decoration: none;
+    }
 
     &:hover {
         color: #deab63;
