--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -22,8 +22,12 @@
         <p class="event_venue-address">{{.Params.venue}}</p>
         <p class="event_venue-address">{{- .Params.address}}</p>
         <a class="facebook-link" href="{{.Params.facebook}}" target="_blank">Facebook event</a>
+        {{if .Params.artistwebsite}}
         <p class="artist-website">artist website:  <a href="{{.Params.artistwebsite}}" target="_blank">{{replaceRE "^https?://([^/]+).*" "$1" .Params.artistwebsite}}</a></p>
+        {{end}}
+        
         <a class="artist-bio" href="/artists/{{.Params.artist | urlize }}">artist bio</a></p>
+
         </section>
         <div class="copy-primary_content">
             {{.Content}}
