--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -29,9 +29,7 @@
         <a class="artist-bio" href="/artists/{{.Params.artist | urlize }}">artist bio</a></p>
 
         </section>
-        <div class="copy-primary_content">
-            {{.Content}}
-        </div>
+        <div class="copy-primary_content">{{.Content}}</div>
 
         <div class="triangle triangle-corner"></div>
         <a class="link_back" href="/events"><div class="triangle triangle_back"></div>EVENTS</a>
