--- a/layouts/index.html
+++ b/layouts/index.html
@@ -61,10 +61,13 @@
             </section>
 
             <section class="info">
-                <h1>Laboratory Spokane</h1>
-                <p>Laboratory is a part of Spokane Interactive Arts, a 501(c)3 non-profit organization.</p>
-                <p>?? --- [Contact Info] --- ??</p>
-                <p>?? --- list / logos of supporters --- ??</p>
+                <hr>
+                <div class="org-info"><h1>Laboratory</h1><p> is a part of Spokane Interactive Arts, a 501(c)3 non-profit organization.</p></div>
+                <p>Laboratory’s mission is to provide practicing interactive artists with the time, space, and freedom to make awesome stuff.  We offer artists from around the world space to live, space to work, tools, mentorship, and connections to make that happen.</p>
+                <p>Laboratory</p>
+                    <p>228 W Sprague Ave, Unit One</p>
+                    <p>Spokane, WA 99201</p>
+                <p>Laboratory projects are sponsored in part by a grant through Spokane Arts’ SAGA program.</p>
             </section>
 
 
