--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -9,9 +9,10 @@
     <div class="header_nav_menu-item">support us
         <div class="triangle triangle_drop-down"></div>
         <div class="nav_subnav">
-            <div class="subnav_menu-item">contribute</div>
-            <div class="subnav_menu-item">volunteer</div>
-            <div class="subnav_menu-item">donate space</div>
+            <div class="subnav_menu-item"><a href="/support">contribute</a></div>
+            <div class="subnav_menu-item"><a href="/support">volunteer</a></div>
+            <div class="subnav_menu-item"><a href="/support">donate space</a></div>
+            <div class="subnav_menu-item"><a href="/contributors">our supporters</a></div>
         </div>
     </div>
 
@@ -19,8 +20,8 @@
     <div class="header_nav_menu-item">residency
         <div class="triangle triangle_drop-down"></div>
         <div class="nav_subnav">
-            <div class="subnav_menu-item">info for artists</div>
-            <div class="subnav_menu-item">how to apply</div>
+            <div class="subnav_menu-item"><a href="/residency">info for artists</a></div>
+            <div class="subnav_menu-item"><a href="/residency/apply">how to apply</a></div>
         </div>
     </div>
 </nav>
