--- a/assets/sass/date-filter.scss
+++ b/assets/sass/date-filter.scss
@@ -16,7 +16,7 @@
         background: #A3A09C;
         text-align: center;
         border: none;
-        margin: 0 10px 0 10px;
+        margin-left: 10px;
         height: 27px;
         width: 100px;
         box-shadow: inset 1px 2px 10px #77736e;
@@ -25,6 +25,7 @@
         padding-bottom: 2px;
         font-size: 18px;
         text-transform: uppercase;
+        text-shadow: 1px 2px 10px #77736e;
     }
 
     .year-select::placeholder {
@@ -75,7 +76,7 @@ datalist option {
         box-shadow: none;
         cursor: pointer;
         color: #fff;
-        // font-weight: 600;
+        text-shadow: none;
     }
 }
 
