--- a/assets/sass/list-page.scss
+++ b/assets/sass/list-page.scss
@@ -92,27 +92,28 @@
         font-size: 17px;
         line-height: 1.3;
     }
-
-    .preview_summary {
-        display: inline-block;
-        font-size: 17px;
-        line-height: 1.4;
-        margin-top: 10px;
-    }
-
-
 }
 
-
-
-.artist-pic {
-    max-width: 95%;
+.artist-listing {
+    .artist-pic {
+        max-width: 95%;
+        margin-bottom: 10px;
+    }
+    
 }
 
 .artist-name {
     font-size: 24px;
     font-weight: 700;
     margin-bottom: 15px;
+}
+
+.list-page_summary {
+    display: inline-block;
+    font-size: 17px;
+    line-height: 1.4;
+    margin-top: 10px;
+    width: 95%;
 }
 
 
