--- a/layouts/partials/event_preview.html
+++ b/layouts/partials/event_preview.html
@@ -23,7 +23,7 @@
         </div>
 
 
-        <p class="preview_summary">{{.Summary | truncate 160 }}</p>
+        <p class="list-page_summary">{{.Summary | truncate 160 }}</p>
 
         <a class="preview_link-more" href="{{.URL}}">more</a>
 
