residency pages content & setup in partial

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,6 +5,7 @@
 @import 'list-page';
 @import 'pagination';
 @import 'date-filter';
+@import 'residency';
 
 * {
     -webkit-box-sizing: border-box;
