--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,7 +12,7 @@
     <section class="copy-primary">
 
         <h1>{{.Params.title}}</h1>
-        <h2>(defaualt list page)</h2>
+        <h2>(default list page)</h2>
 
         <div class="copy-primary_content">{{.Content}}</div>
       
