--- a/layouts/residency/single.html
+++ b/layouts/residency/single.html
@@ -2,28 +2,6 @@
 <!-- RESIDENCY - SINGLE TEMPLATE (Single and List are the same for residency so "_index.md" can be overview ) -->
 <!-- Nav, Social, and Header pic are in baseof -->
 
-<section class="preview_list events_list">
-        
-
-        <h1>More Residency Info</h1>
-
-
-
-        <ul>
-                {{ range sort (where .Site.Pages ".Params.type" "residency") ".Params.order"}}
-                <li>{{.Params.title}}</li>
-                {{end}}
-        </ul>
-
-    
-        </section>
-    
-        <section class="copy-primary">
-            
-            
-            <h1>{{.Params.title}}</h1>
-            <div class="copy-primary_content">{{.Content}}</div>
-            
-        </section>
+{{partial "residency" .}}
 
 {{end}}
