--- a/assets/sass/residency.scss
+++ b/assets/sass/residency.scss
@@ -14,7 +14,7 @@
         list-style: none;
         font-size: 18px;
         line-height: 1.5;
-        padding-left: 0;
+        padding-left: 5px;
     }
 
     img {
