--- a/assets/sass/single-page.scss
+++ b/assets/sass/single-page.scss
@@ -62,9 +62,9 @@
 
 .event-info {
     margin-top: 30px;
+    font-size: 18px;
 
     a {
-        font-size: 18px;
         display: block;
         margin-top: 15px;
     }
@@ -76,9 +76,9 @@
     line-height: 1.3;
 }
 
-.event_venue-address {
+.event_address {
     font-size: 18px;
-    margin: 5px;
+    margin: -12px 0 30px 0;
 }
 
 .triangle-corner {
@@ -137,11 +137,16 @@
     .artist-website {
         font-size: 18px;
         white-space: pre;
-        margin: 30px 0;
+        display: inline-block;
+        margin-top: 10px;
 
         a {
             display: inline;
         }
+    }
+
+    .artist-bio {
+        margin-top: 20px;
     }
 
 }
