--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,7 +29,9 @@
             {{end}}
 
         </div>
-
+        {{ partial "to-top" .}}
+        
+        <script src="/js/scrollToTop.js" async defer></script>
 </body>
 
 </html>
