--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -19,6 +19,7 @@
         <div class="copy-primary_content">{{.Content}}</div>
         
     </section>
-
+    
+    {{ partial "to-top" .}}
 
 {{end}}
