--- a/layouts/index.html
+++ b/layouts/index.html
@@ -74,11 +74,11 @@
 
         </div>
 
-
+        {{ partial "to-top" .}}
 
     </div>
 
-    <!-- <script src="" async defer></script> -->
+    <script src="/js/scrollToTop.js" async defer></script>
 </body>
 
 </html>
