--- a/assets/sass/nav.scss
+++ b/assets/sass/nav.scss
@@ -102,5 +102,37 @@
 }
 
 
+/* ===== TO-TOP ===== */
+
+
+
+
+
+
+.to-top {
+    display: none;
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    border: solid 1px rgba(200, 200, 200, 0.6);
+    background: rgba(135, 165, 216, 0.45);
+    position: fixed;
+    bottom: 25px;
+    right: 5px;
+    z-index: 100;
+    outline: none;
+    cursor: pointer;
+    box-shadow: 2px 4px 15px rgba(50, 50, 50, 0.25);
+
+
+    .triangle {
+        border-width: 0 16px 27px 16px;
+        border-color: transparent transparent #fff transparent;
+        margin: -8px 0 0 15px;
+    }
+}
+
+
+
 
 
